# ff-a-acs

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.gitignore/: .gitignore
docs/: ffa_v1.1_sel0_test_scenarios.md  ffa_v1.1_test_scenarios.md  ffa_v1.2_test_scenarios.md  porting_guide.md  testcase_checklist.md  testcase_unverified.md
linux-user/: main.c  pal.cmake
linux-user/inc/: arm_ffa_acs.h  pal_arch_helpers.h  pal_config_def.h  pal_kernel_helpers.h  pal_log.h  pal_smmuv3_testengine.h
linux-user/src/: pal_driver.c  pal_irq.c  pal_kernel_helpers.c  pal_libc.c  pal_log.c  pal_sp_helpers.c  pal_spm_helpers.c  pal_vcpu_setup.c
linux_app/: Makefile  ffa_acs_app.c
platform/common/inc/: pal.h  pal_common_val_intf.h  pal_endpoint_info.h  pal_interfaces.h  pal_irq.h  pal_libc.h  pal_log.h  pal_memory.h  pal_misc_asm.h  pal_mmio.h  pal_shemaphore.h  pal_spm_helpers.h
platform/common/src/: pal_asm_smc.S  pal_libc.c  pal_log.c  pal_misc_asm.S  pal_sp_helpers.c  pal_spinlock.S  pal_spm_helpers.c
platform/driver/inc/: pal_ap_refclk_timer.h  pal_arm_gic.h  pal_cdefs.h  pal_ffa_console_log.h  pal_gic_common.h  pal_gic_v2.h  pal_gic_v3.h  pal_log.h  pal_nvm.h  pal_pl011_uart.h  pal_smmuv3_testengine.h  pal_sp805_watchdog.h  pal_xen_console.h  pal_xen_pvconsole.h
platform/driver/src/: pal_ap_refclk_timer.c  pal_ffa_console_log.c  pal_log.c  pal_nvm.c  pal_pl011_uart.c  pal_smmuv3_testengine.c  pal_sp805_watchdog.c  pal_xen_console.c  pal_xen_pvconsole.c
platform/manifest/tgt_tfa_fvp/: fvp_spmc_manifest.dts  fvp_spmc_manifest_el0.dts  fvp_spmc_manifest_el0_linux_xen.dts  fvp_spmc_manifest_linux.dts  fvp_spmc_manifest_linux_xen.dts  fvp_tb_fw_config.dts  manifest_baremetal.dts  manifest_linux.dts  sp1.dts  sp1_el0.dts  sp2.dts  sp2_el0.dts  sp3.dts  sp3_el0.dts  sp4.dts  sp4_el0.dts  sp_layout.json  sp_layout_el0.json  sp_layout_el0_multi.json  sp_layout_el0_v11.json  sp_layout_el0_v12.json  sp_layout_multi.json  sp_layout_v11.json  sp_layout_v12.json
platform/manifest/tgt_tfa_tc0/: manifest_baremetal.dts  manifest_linux.dts  sp1.dts  sp2.dts  sp3.dts  tc0_spmc_manifest.dts
platform/pal_baremetal/tgt_tfa_fvp/: pal.cmake
platform/pal_baremetal/tgt_tfa_tc0/: pal.cmake
test/: Makefile  test.cmake
test/common/: test_database.c  test_database.h  test_database_v_1_0.c  test_database_v_1_1.c  test_database_v_1_2.c  test_database_v_1_2_linux.c  test_database_v_1_2_xen.c  test_database_v_multi.c
test/direct_messaging/ffa_direct_message_32/: ffa_direct_message_32_client.c  ffa_direct_message_32_server.c  ffa_direct_message_32_testentry.c  ffa_message_data.h
test/direct_messaging/ffa_direct_message_64/: ffa_direct_message_64_client.c  ffa_direct_message_64_server.c  ffa_direct_message_64_testentry.c  ffa_message_data.h
test/direct_messaging/ffa_direct_message_error/: ffa_direct_message_error_client.c  ffa_direct_message_error_testentry.c
test/direct_messaging/ffa_direct_message_error1/: ffa_direct_message_error1_client.c  ffa_direct_message_error1_testentry.c
test/indirect_messaging/ffa_msg_send/: ffa_msg_send_client.c  ffa_msg_send_server.c  ffa_msg_send_testentry.c
test/indirect_messaging/ffa_msg_send_error/: ffa_msg_send_error_client.c  ffa_msg_send_error_testentry.c
test/memory_manage/donate_input_error_checks/: donate_input_error_checks_client.c
test/memory_manage/donate_invalid_handle_tag/: donate_invalid_handle_tag_client.c  donate_invalid_handle_tag_server.c  donate_invalid_handle_tag_testentry.c
test/memory_manage/donate_lower_upper_boundary/: donate_lower_upper_boundary_32_client.c  donate_lower_upper_boundary_32_server.c  donate_lower_upper_boundary_32_testentry.c  donate_lower_upper_boundary_64_client.c  donate_lower_upper_boundary_64_server.c  donate_lower_upper_boundary_64_testentry.c
test/memory_manage/donate_retrieve_input_checks/: donate_retrieve_input_checks1_client.c  donate_retrieve_input_checks1_server.c  donate_retrieve_input_checks2_client.c  donate_retrieve_input_checks2_server.c
test/memory_manage/ffa_mem_donate/: ffa_mem_donate_mmio_client.c  ffa_mem_donate_mmio_testentry.c
test/memory_manage/ffa_mem_lend/: ffa_mem_lend_client.c  ffa_mem_lend_mmio_client.c  ffa_mem_lend_mmio_testentry.c  ffa_mem_lend_server.c
test/memory_manage/ffa_mem_reclaim/: reclaim_input_error_checks_client.c  reclaim_input_error_checks_server.c  reclaim_input_error_checks_testentry.c  reclaim_zero_flag_client.c  reclaim_zero_flag_server.c
test/memory_manage/ffa_mem_share/: ffa_mem_share_client.c  ffa_mem_share_handle_client.c  ffa_mem_share_handle_server.c  ffa_mem_share_handle_testentry.c  ffa_mem_share_mmio_client.c  ffa_mem_share_mmio_testentry.c  ffa_mem_share_server.c  ffa_mem_share_tag_client.c  ffa_mem_share_tag_server.c  ffa_mem_share_tag_testentry.c  ffa_mem_share_testentry.c
test/memory_manage/ffa_mem_share_read_only_chk/: ffa_mem_share_32_read_only_chk_client.c  ffa_mem_share_32_read_only_chk_server.c  ffa_mem_share_32_read_only_chk_testentry.c  ffa_mem_share_64_read_only_chk_client.c  ffa_mem_share_64_read_only_chk_server.c  ffa_mem_share_64_read_only_chk_testentry.c
test/memory_manage/ffa_mem_share_retrieve/: ffa_mem_share_retrieve_client.c  ffa_mem_share_retrieve_server.c  (+1 more)
tools/: malloc_test.c
tools/build-scripts-fvp/: README.md  acs-demo.sh
tools/cmake/endpoints/vm1/: CMakeLists.txt  image.ld.S
tools/config/: ffa-acs-baremetal.yaml  ffa-acs-base.yaml  ffa-hafnium.yaml  ns-base-ffa.yaml
tools/python/: ffa_endpoints.py  generate-multi-sp-manifest.py
val/: Makefile  val.cmake
val/inc/: val.h  val_def.h  val_endpoint_info.h  val_exceptions.h  val_ffa.h  val_ffa_helpers.h  val_framework.h  val_interfaces.h  val_irq.h  val_log.h  val_malloc.h  val_memory.h  val_misc.h  val_shemaphore.h  val_sysreg.h  val_test_dispatch.h  val_timer.h  val_vcpu_setup.h  val_wd.h
val/src/: val_endpoint_info.c  val_exceptions.c  val_ffa_abi.c  val_ffa_helpers.c  val_framework.c  val_irq.c  val_main.c  val_malloc.c  val_memory.c  val_misc.c  val_shemaphore.c  val_test_dispatch.c  val_timer.c  val_vcpu_setup.c  val_wd.c
(+708 files in other folders)
